--- a/Documentation/10613915_10599689.tex
+++ b/Documentation/10613915_10599689.tex
@@ -34,6 +34,14 @@ initial text=$ $, % sets the text that appears on the start arrow
 
 %for code
 \usepackage{listings}
+
+\makeatletter
+\long\def\@makecaption#1#2{%
+  \vskip\abovecaptionskip
+    \bfseries #1: #2\par
+  \vskip\belowcaptionskip}%
+\makeatother
+
 \usepackage{color}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
@@ -174,6 +182,7 @@ port (
 );
 end project_reti_logiche;
 \end{lstlisting}
+
 L'interfaccia del componente, per potersi relazionare con la memoria, deve essere come quella sopra riportata. I segnali di input vengono evidenziati dal prefisso \texttt{\lq i\_'}, mentre per i segnali di output è presente il prefisso \texttt{\lq o\_'}. Nel dettaglio:
 \begin{itemize}
   \item \textbf{i\_clk} scandisce il ciclo di clock della memoria, registrando \lq$1$' sul \texttt{rising\_edge}.
@@ -188,7 +197,36 @@ L'interfaccia del componente, per potersi relazionare con la memoria, deve esser
 \end{itemize}
 \pagebreak
 \subsection{Dati e Descrizione memoria}
-Write somenthing here
+\begin{lstlisting}[title={Fig.1}]
+architecture projecttb of project_tb is
+  constant    c_CLOCK_PERIOD     : time := 15 ns;
+  signal      mem_address        : std_logic_vector (15 downto 0);
+  signal      mem_o_data         : std_logic_vector (7 downto 0);
+  signal      mem_i_data         : std_logic_vector (7 downto 0);
+  signal      tb_done            : std_logic;
+  signal      tb_rst             : std_logic;
+  signal      tb_start           : std_logic;
+  signal      tb_clk             : std_logic;
+  signal      enable_wire        : std_logic;
+  signal      mem_we             : std_logic;
+
+type ram_type is array (65535 downto 0) of std_logic_vector(7 downto 0);
+\end{lstlisting}
+\begin{lstlisting}[title={Fig. 2}]
+begin
+UUT: project_reti_logiche
+port map (
+          i_clk       => tb_clk,
+          i_start     => tb_start,
+          i_rst       => tb_rst,
+          i_data      => mem_o_data,
+          o_address   => mem_address,
+          o_done      => tb_done,
+          o_en        => enable_wire,
+          o_we        => mem_we,
+          o_data      => mem_i_data
+          );
+\end{lstlisting}
 
 \pagebreak
 \section{Desing Pattern}
@@ -197,15 +235,14 @@ La struttura del progetto è stata suddivisa in due process principali: \texttt{
 Il primo ha il compito di relazionarsi con la memoria e il secondo contiene gli stati della macchina impiegati nella equalizzazione delle immagini. In questo modo una porzione di codice è adibita esclusivamente alla computazione dei pixel (process \texttt{STATES}), mentre la rimanente si occupa dei segnali di output della \textit{entity} (process \texttt{UPDATE}).\\
 Per permette un corretto dialogo tra i due process è nata l'esigenza di avere dei segnali ``duplicati".
 I segnali con suffisso \texttt{\lq\_cp'} sono stati introdotti per mantere in memoria i valori computati, mentre i segnali con suffisso \texttt{\lq\_next'} sono stati implementati allo scopo di permettere agli stati di far richieste alla memoria.
-Nel particolare, per ogni ciclo di clock, durante il \textit{rising\_edge}, il process \texttt{UPDATE} si risveglia, aggiornando i segnali. I segnali contenenti i valori da mantenere vengono reimpostati con i segnali \texttt{\lq\_cp'}, mentre i segnali di output della \textit{entity} sono aggiornati con i segnali \texttt{\lq\_next'}.
-
-Il succo della computazione è trattunuto dal process \texttt{STATES}, che è a tutti gli effetti un \texttt{FSA} (\textit{Macchina a Stati Finiti}) rappresentabile attraverso lo schema al paragrafo $2.3$.
+Nel particolare, per ogni ciclo di clock, durante il \textit{rising\_edge}, il process \texttt{UPDATE} si risveglia, aggiornando i segnali. I segnali contenenti i valori da mantenere vengono reimpostati con i segnali \texttt{\lq\_cp'}, mentre i segnali di output della \textit{entity} sono aggiornati con i segnali \texttt{\lq\_next'}.\\
+Il process \texttt{STATES} è a tutti gli effetti un \texttt{FSA} (\textit{Macchina a Stati Finiti}) rappresentabile attraverso lo schema al paragrafo $2.3.1$.
 Il suo funzionamento è permesso sostanzialmente da tre segnali a lui dedicati: \texttt{next\_state}, che identifica la chiamata allo stato prossimo,  \texttt{curr\_state}, che rileva lo stato corrente, e \texttt{prev\_state}, che conserva lo stato precedente.
 
-\subsection{Elenco Stati}
+\subsection{Elenco Stati - Process STATES}
 
 \subsubsection{START}
-Lo stato di \texttt{START} è il primo stato del process \texttt{STATES} ed è stato pensato come stato di attesa iniziale. Questo stato viene invocato in due situazioni differenti: se il segnale di \texttt{i\_rst} viene portato alto, oppure quando il segnale \texttt{i\_start} viene riportato basso dopo la computazione di un immagine. Lo stato \texttt{START} non cambia fino a quando il segnale \texttt{i\_start} non viene portato alto. In quel momento lo stato successivo viene impostato \texttt{INIT}.
+Lo stato di \texttt{START} è il primo stato del process \texttt{STATES} ed è stato pensato come stato di attesa iniziale. Questo stato viene invocato in due situazioni differenti: se il segnale di \texttt{i\_rst} viene portato alto, oppure quando il segnale \texttt{i\_start} viene riportato basso dopo la computazione di un immagine. Lo stato \texttt{START} non cambia fino a quando il segnale \texttt{i\_start} non viene portato alto. In quel momento lo stato successivo viene impostato a \texttt{INIT}.
 
 \subsubsection{INIT}
 \texttt{INIT} è uno stato di transizione nel quale il processore si assicura che i segnali siano inizializzati con i valori opportuni. Successivamente imposta lo stato prossimo a \texttt{ABILIT\_READ}.
@@ -237,7 +274,7 @@ La moltiplicazione usa segnali \textit{std\_logic\_vector} da $8$ bit e produce 
 \texttt{READ\_PIXEL} è uno stato strettamente connesso con lo stato \texttt{GET\_MINMAX}. Richiede alla memoria il valore del pixel da leggere e aggiorna il segnale \texttt{curr\_address} a quello successivo. In questo modo il valore del pixel sarà disponibile sul segnale \texttt{i\_data} dopo due \textit{rising\_edge} successivi. L'attesa è sempre lasciata allo stato \texttt{WAIT\_MEM}.
 
 \subsubsection{GET\_MINMAX}
-\texttt{GET\_MINMAX} aggiorna i segnali \texttt{max\_pixel\_value} e \texttt{min\_pixel\_value}, inizializzati rispettivamente con $0$ e $255$, con il valore di \texttt{i\_data}. Questo avviene se e solo se si verifica che \texttt{i\_data} è \textit{maggiore} di \texttt{max\_pixel\_value} (in questo caso aggiorna \texttt{max\_pixel\_value}) oppure se \texttt{i\_data} è \textit{minore} di \texttt{min\_pixel\_value} (in questo caso aggiorna \texttt{min\_pixel\_value}). Imposta lo stato prossimo a \texttt{READ\_PIXEL}
+\texttt{GET\_MINMAX} aggiorna i segnali \texttt{max\_pixel\_value} e \texttt{min\_pixel\_value}, inizializzati rispettivamente con $0$ e $255$, con il valore di \texttt{i\_data}. Questo avviene se e solo se si verifica che \texttt{i\_data} è \textit{maggiore} di \texttt{max\_pixel\_value} (in questo caso aggiorna \texttt{max\_pixel\_value}) oppure se \texttt{i\_data} è \textit{minore} di \texttt{min\_pixel\_value} (in questo caso aggiorna \texttt{min\_pixel\_value}). Infine, imposta lo stato prossimo a \texttt{READ\_PIXEL}
 %non so perche lo mette in viola
 
 \subsubsection{GET\_DELTA}
@@ -267,7 +304,7 @@ Per effettuare il calcolo, richiama se stesso (attraverso lo stato \texttt{WAIT\
 \\
 \\
 \\
-Sostanzialmente attraverso il ciclo \texttt{WHILE} si ricava \textit{k}, il quale non è altro che il valore di $\floor{log_2(delta\_value +1)}$. Questa procedura è forse quella più dispendiosa a livello di tempo e memoria, poichè per aggiornare ogni segnale si deve come minimo attendere due cicli di clock. Inoltre, la moltiplicazione tra due interi (\textit{t} e $2$) produce un risultato su $64$ \textit{bit} che VHDL gestisce troncando a $32$ \textit{bit}. Per le specifiche del progetto ci si aspetta che \textit{k} non possa assumere un valore maggiore di $8$, pertando si è certi che una variabile a $32$ \textit{bit} possa largamente contenere i valori desiderati.
+Sostanzialmente attraverso il ciclo \texttt{WHILE} si ricava \textit{k}, il quale non è altro che il valore di $\floor{log_2(delta\_value +1)}$. Questa procedura è forse quella più dispendiosa a livello di tempo e memoria, poichè per aggiornare ogni segnale si deve come minimo attendere due cicli di clock. Inoltre, la moltiplicazione tra due interi (\textit{t} e $2$) produce un risultato su $64$ \textit{bit} che VHDL gestisce troncando a $32$ \textit{bit}. Per le specifiche del progetto, ci si aspetta che \textit{k} non possa assumere un valore maggiore di $8$. Pertanto, si è certi che una variabile a $32$ \textit{bit} possa largamente contenere i valori desiderati.
 
 \subsubsection{GET\_PIXEL}
 \texttt{GET\_PIXEL} è uno stato omonimo di \texttt{READ\_PIXEL}. La principale differenza del primo con il secondo è che mentre \texttt{READ\_PIXEL} effettua dei controlli sul flusso della computazione, \texttt{GET\_PIXEL} richiede solamente alla memoria il dato da leggere e imposta lo stato prossimo a \texttt{WAIT\_MEM}.
@@ -275,10 +312,10 @@ Sostanzialmente attraverso il ciclo \texttt{WHILE} si ricava \textit{k}, il qual
 \subsubsection{CALC\_NEWPIXEL}
 In \texttt{CALC\_NEWPIXEL} si calcola il nuovo valore del pixel da scrive in memoria.
 Per farlo, viene utilizzata una variabile di appoggio \texttt{pixel\_to\_shift} definita come uno \textit{std\_logic\_vector} da $16$ \textit{bit} e inizializzata come $\texttt{i\_data}-\texttt{min\_pixel\_value}$ con l’aggiunta di otto `$0$' in posizione più significativa.
-La variabile viene, quindi, shiftata e su di essa viene fatto il seguente controllo: se risulta essere minore di $255$ allora aggiorniamo il segnale \texttt{new\_pixel} al suo valore in \textit{std\_logic\_vector} su $8$\textit{bit}, altrimenti il segnale \texttt{new\_pixel} viene impostato a $255$ sempre in \textit{std\_logic\_vector} su $8$ \textit{bit}.
+La variabile viene, quindi, shiftata e su di essa viene fatto il seguente controllo: se risulta essere minore di $255$ allora aggiorniamo il segnale \texttt{new\_pixel} al suo valore in \textit{std\_logic\_vector} su $8$ \textit{bit}, altrimenti il segnale \texttt{new\_pixel} viene impostato a $255$ sempre in \textit{std\_logic\_vector} su $8$ \textit{bit}.
 
 \subsubsection{WRITE\_PIXEL}
-Lo stato \texttt{WRITE\_PIXEL} si assicura che il valore del nuovo pixel calcolato sia scritto in memoria, incrementa tutti i contatori e controlla di non essere arrivato al termine della computazione. Il controllo usufruisce della varibile intera \texttt{last}, che assume il valore di $2*\texttt{n\_col}*\texttt{n\_row}+2$, ovvero l'indice dell'ultimo pixel scrivibile. Quando il contatore assume questo valore lo stato successivo viene impostato a \texttt{DONE} (sempre attravero \texttt{WAIT\_MEM}), altrimenti viene impostato lo stato prossimo a \texttt{ABILIT\_READ}, dove la scrittura viene disabilitata e viene riabilitata la lettura per il pixel successivo.
+Lo stato \texttt{WRITE\_PIXEL} si assicura che il valore del nuovo pixel calcolato sia scritto in memoria, incrementa tutti i contatori e controlla di non essere arrivato al termine della computazione. Il controllo usufruisce della varibile intera \texttt{last}, che assume il valore di $2*\texttt{n\_col}*\texttt{n\_row}+2$, ovvero l'indice dell'ultimo pixel scrivibile. Quando il contatore assume questo valore lo stato successivo viene impostato a \texttt{DONE} (sempre attravero \texttt{WAIT\_MEM}), altrimenti viene impostato lo stato prossimo a \texttt{ABILIT\_READ}, dove la scrittura viene disabilitata e viene riabilitata la lettura per il pixel successivo. Anche qui, si noti che il calcolo di \texttt{last} è sicuramente contenibile in una varibile a $32$ \textit{bit}.
 
 \subsubsection{DONE}
 \texttt{DONE} chiude tutte le comunicazioni con la memoria, riportando a `$0$' sia \texttt{o\_en} che \texttt{o\_we} e pulendo il buffer di \texttt{o\_address} e \texttt{o\_data}.
@@ -286,11 +323,13 @@ Successivamente il segnale \texttt{o\_done} viene portato ad `$1$' e lo stato pr
 
 
 \subsubsection{WAITINGPIC}
-Ultimo stato del processo. Ha lo scopo di restare in attesa che il segnale di \texttt{o\_done} venga riportato a `$0$'. Finche ciò non avviene, \texttt{ WAITING\_PIC} richiama se stesso. Quando sia \texttt{i\_start} che \texttt{o\_done} hanno il segnale a `$0$', imposta lo stato prossimo a \texttt{START} facendo ricominciare l’intera compilazione.
+Ultimo stato del processo. Ha lo scopo di restare in attesa che il segnale di \texttt{i\_start} venga riportato a `$0$'. Finche ciò non avviene, \texttt{ WAITING\_PIC} richiama se stesso. Quando sia \texttt{i\_start} che \texttt{o\_done} hanno il segnale a `$0$', imposta lo stato prossimo a \texttt{START} facendo ricominciare l’intera compilazione.
 
+\subsection{Approfondimento sul process STATES}
+All'interno del process \texttt{STATES} si possono notare due macro momenti della computazione. Il primo (in rosso sullo schema al paragrafo successivo) è quello descritto dalla prima lettura completa della memoria, attraverso la quale si determinano tutti i valori necessari per la computazione del nuovo pixel. Si noti inoltre che all'interno del primo momento abbiamo due cicli ben distinti: uno per il calcolo del \textit{max\_value} e \textit{min\_value} e uno per il calcolo dello \textit{shift\_level} (rispettivamente in blue e marrone). Il secondo momento (in verde), invece, è descritto dalla seconda lettura semi-completa della memoria (difatto si esclude la lettura dei primi $2$ \textit{byte}) ed è il momento nel quale il pixel appena letto viene rielaborato e salvato in memoria nel \textit{byte} opportuno. Questa doppia lettura della memoria, sebbene aumenti la complessità temporale, è strettamente necessaria, per via del calcolo del \textit{delta}. Iniziamente, si era pensato di ottimizzare il secondo momento con due proeccess paralleli: il primo avrebbe elaborato i pixel pari, mentre il secondo i pixel dispari, e sarebbero stati gestiti da opportuni `semafori'. Tuttavia, la struttura attuale è risultata essere molto più stabile nei test, permettendoci anche di variare a nostra discrezione il tempo di clock della computazione.
 \pagebreak
 
-\subsection{Schema process STATES}
+\subsubsection{Schema process STATES}
 %FSA
 \vspace{0.5 cm}
 \begin{center}
@@ -315,31 +354,31 @@ Ultimo stato del processo. Ha lo scopo di restare in attesa che il segnale di \t
   \node[state] (waitingpic) [below=of done, scale=0.6]  {$WAITINGPIC$};
   \node[state] (waitmem) [right=of calcshift, xshift=8cm, scale=1.2]  {$WAIT\_MEM$};
 
-  \draw (start) edge node{} (init)
-        (init) edge node{} (abilitread)
-        (abilitread) edge node{} (getrc)
-        (getrc) edge[bend left, out=60, in=45, looseness=1] node{} (waitmem)
-        (waitmem) edge[bend right, in=-100, out=200, looseness=2] node{} (getrc)
-        (getdim) edge[bend left, in=120] node{} (waitmem)
-        (waitmem) edge[bend right, out=-70, in=-100] node{} (getdim)
-        (readpixel) edge[bend left, out=50, in=130] node{} (waitmem)
-        (waitmem) edge[bend right, out=-30] node{} (getminmax)
-        (getminmax) edge node{} (readpixel)
-        (readpixel) edge[bend right=90] node{} (getdelta)
-        (waitmem) edge [bend right, out=-30] node{} (readpixel)
-        (getdelta) edge[bend left] node{} (waitmem)
-        (waitmem) edge[bend right=20] node{} (calcshift)
-        (calcshift) edge[bend right=20] node{} (waitmem)
-        (calcshift) edge node{} (getpixel)
-        (getpixel) edge[bend right] node{} (waitmem)
-        (waitmem) edge[bend left, out=70] node{} (calcnewpixel)
-        (calcnewpixel) edge node{} (abilitwrite)
-        (abilitwrite) edge node{} (writepixel)
-        (writepixel) edge[bend right, in=-80] node{} (waitmem)
-        (writepixel) edge[bend left, in=140] node{} (abilitread)
-        (abilitread) edge[bend right] node{} (getpixel)
-        (waitmem) edge[bend left, out=100, looseness=2] node{} (done)
-        (done) edge node{} (waitingpic)
+  \draw (start) edge[red] node{} (init)
+        (init) edge[red] node{} (abilitread)
+        (abilitread) edge[red] node{} (getrc)
+        (getrc) edge[bend left, out=60, in=45, looseness=1, red] node{} (waitmem)
+        (waitmem) edge[bend right, in=-100, out=200, looseness=2, red] node{} (getrc)
+        (getdim) edge[bend left, in=120, red] node{} (waitmem)
+        (waitmem) edge[bend right, out=-70, in=-100, red] node{} (getdim)
+        (readpixel) edge[bend left, out=50, in=130, blue] node{} (waitmem)
+        (waitmem) edge[bend right, out=-30, blue] node{} (getminmax)
+        (getminmax) edge[blue] node{} (readpixel)
+        (readpixel) edge[bend right=90, red] node{} (getdelta)
+        (waitmem) edge [bend right, out=-30, red] node{} (readpixel)
+        (getdelta) edge[bend left, red] node{} (waitmem)
+        (waitmem) edge[bend right=20, brown] node{} (calcshift)
+        (calcshift) edge[bend right=20, brown] node{} (waitmem)
+        (calcshift) edge[red] node{} (getpixel)
+        (getpixel) edge[bend right, green] node{} (waitmem)
+        (waitmem) edge[bend left, out=70, green] node{} (calcnewpixel)
+        (calcnewpixel) edge[green] node{} (abilitwrite)
+        (abilitwrite) edge[green] node{} (writepixel)
+        (writepixel) edge[bend right, in=-80, green] node{} (waitmem)
+        (writepixel) edge[bend left, in=140, green] node{} (abilitread)
+        (abilitread) edge[bend right, green] node{} (getpixel)
+        (waitmem) edge[bend left, out=100, looseness=2, green] node{} (done)
+        (done) edge[green] node{} (waitingpic)
         (waitingpic) edge[bend left] node{} (start)
         ;
 \end{tikzpicture}
