--- a/Documentation/10613915_10599689.tex
+++ b/Documentation/10613915_10599689.tex
@@ -677,10 +677,12 @@ I test in questione hanno ottenuto i seguenti risultati:
 \end{center}
 
 In realtà sono stati fatti ulteriori test, con diverso numero di immagini, di varie dimensioni e con \textit{reset} ``casuale", tuttavia riportare ulteriori test a quelli presentati risulterebbe ridondante.
+
+QUI FORMULA PER IL CALCOLO DEL CLOCK LIMITE PRIMA DELLA ROTTURA
 \pagebreak
 
 \subsection{Esempi di equalizzazione}
-Lo scopo del progetto era quello di equalizzare un'immagine con il metodo dell'istogramma. Pertanto, sarebbe non totalizzante verificare in maniera grafica che il nostro processore elabori in maniera opportuna le immagini fornitogli. In allegato è stata proposta l'elaborazione di tre immagini di diversa risoluzione. Le immagini sono state ottenute modificando il progetto \texttt{VHDL} per ottenere su file testuale i pixel fornitogli e quelli equalizzati. Successivamente, attravero un programma in \texttt{C}, i dati sono stati raccolti per la creazione dell'immagine in \texttt{LaTeX}.\\
+Lo scopo del progetto era quello di equalizzare un'immagine con il metodo dell'istogramma. Pertanto, sarebbe totalizzante verificare in maniera grafica che il nostro processore elabori in maniera opportuna le immagini fornitogli. In allegato è stata proposta l'elaborazione di tre immagini di diversa risoluzione. Le immagini sono state ottenute modificando il progetto \texttt{VHDL} per ottenere su file testuale i pixel fornitogli e quelli equalizzati. Successivamente, attravero un programma in \texttt{C}, i dati sono stati raccolti per la creazione dell'immagine in \texttt{LaTeX}.\\
 
 
 \begin{figure}[h]
