--- a/Documentation/10613915_10599689.tex
+++ b/Documentation/10613915_10599689.tex
@@ -687,6 +687,7 @@ Lo scopo del progetto era quello di equalizzare un'immagine con il metodo dell'i
 
 \begin{figure}[h]
 \centering
+  \captionsetup[subfigure]{labelformat=empty}
 \begin{subfigure}[b]{0.4\linewidth}
 \begin{tikzpicture}
 \draw[step=1.000000cm,gray,very thin] (0,0) grid (5.000000,5.000000);
@@ -755,6 +756,7 @@ Lo scopo del progetto era quello di equalizzare un'immagine con il metodo dell'i
 
 \begin{figure}[h]
 \centering
+\captionsetup[subfigure]{labelformat=empty}
 \begin{subfigure}[b]{0.4\linewidth}
 \begin{tikzpicture}
 \draw[step=0.500000cm,gray,very thin] (0,0) grid (5.000000,5.000000);
@@ -973,6 +975,7 @@ Lo scopo del progetto era quello di equalizzare un'immagine con il metodo dell'i
 
 \begin{figure}[h]
 \centering
+\captionsetup[subfigure]{labelformat=empty}
 \begin{subfigure}[b]{0.4\linewidth}
 \begin{tikzpicture}
 \draw[step=0.250000cm,gray,very thin] (0,0) grid (5.000000,5.000000);
