--- a/Documentation/10613915_10599689.tex
+++ b/Documentation/10613915_10599689.tex
@@ -586,67 +586,65 @@ Ultimo stato del processo. Ha lo scopo di restare in attesa che il segnale di \t
 
 \subsection{Approfondimento sul process STATES}
 All'interno del process \texttt{STATES} si possono notare due macro momenti della computazione. Il primo (in rosso sullo schema al paragrafo successivo) è quello descritto dalla prima lettura completa della memoria, attraverso la quale si determinano tutti i valori necessari per la computazione del nuovo pixel. Si noti inoltre che all'interno del primo momento abbiamo due cicli ben distinti: uno per il calcolo del \textit{max\_value} e \textit{min\_value} e uno per il calcolo dello \textit{shift\_level} (rispettivamente in blue e marrone). Il secondo momento (in verde), invece, è descritto dalla seconda lettura semi-completa della memoria (difatto si esclude la lettura dei primi $2$ \textit{byte}) ed è il momento nel quale il pixel appena letto viene rielaborato e salvato in memoria nel \textit{byte} opportuno. Questa doppia lettura della memoria, sebbene aumenti la complessità temporale, è strettamente necessaria, per via del calcolo del \textit{delta}. Iniziamente, si era pensato di ottimizzare il secondo momento con due proeccess paralleli: il primo avrebbe elaborato i pixel pari, mentre il secondo i pixel dispari, e sarebbero stati gestiti da opportuni `semafori'. Tuttavia, la struttura attuale è risultata essere molto più stabile nei test, permettendoci anche di variare a nostra discrezione il tempo di clock della computazione.
-\pagebreak
-
-\subsubsection{Schema process STATES}
+\includegraphics[width=16cm, height=11.5cm]{FSM.png}
+%\pagebreak
+%\subsubsection{Schema process STATES}
 %FSA
-\vspace{0.5 cm}
-\begin{center}
-\resizebox{!}{24cm}{
-\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=2cm,
-        scale = 1,transform shape, on grid]
+%\vspace{0.5 cm}
+%\begin{center}
+%\resizebox{!}{24cm}{
+%\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=2cm,
+%        scale = 1,transform shape, on grid]
 
-  \node[state] (start) [scale=1] {$START$};
-  \node[state] (init) [below=of start, scale=1]  {$INIT$};
-  \node[state] (abilitread) [below= of init, scale=0.5]  {$ABILIT\_READ$};
-  \node[state] (getrc) [below=of abilitread, scale=0.8, yshift=-0.5cm]  {$GET\_RC$};
-  \node[state] (getdim) [below=of getrc, scale=0.6]  {$GET\_DIM$};
-  \node[state] (readpixel) [below=of getdim, scale=0.5]  {$READ\_PIXEL$};
-  \node[state] (getminmax) [below =of readpixel, scale=0.5] {$GET\_MINMAX$};
-  \node[state] (getdelta) [below =of getminmax, scale=0.5] {$GET\_DELTA$};
-  \node[state] (calcshift) [below=of getdelta, scale=0.5]  {$CALC\_SHIFT$};
-  \node[state] (getpixel) [below=of calcshift, scale=0.5 ]  {$GET\_PIXEL$};
-  \node[state] (calcnewpixel) [below=of getpixel, scale=0.5]  {$CALC\_NEWPIXEL$};
-  \node[state] (abilitwrite) [below=of calcnewpixel, scale=0.5, yshift=-1cm]  {$ABILIT\_WRITE$};
-  \node[state] (writepixel) [below=of abilitwrite, scale=0.5, yshift=-1cm]  {$WRITE\_PIXEL$};
-  \node[state] (done) [below=of writepixel, scale=0.7]  {$DONE$};
-  \node[state] (waitingpic) [below=of done, scale=0.6]  {$WAITINGPIC$};
-  \node[state] (waitmem) [right=of calcshift, xshift=8cm, scale=1.2]  {$WAIT\_MEM$};
+%  \node[state] (start) [scale=1] {$START$};
+%  \node[state] (init) [below=of start, scale=1]  {$INIT$};
+%  \node[state] (abilitread) [below= of init, scale=0.5]  {$ABILIT\_READ$};
+%  \node[state] (getrc) [below=of abilitread, scale=0.8, yshift=-0.5cm]  {$GET\_RC$};
+%  \node[state] (getdim) [below=of getrc, scale=0.6]  {$GET\_DIM$};
+%  \node[state] (readpixel) [below=of getdim, scale=0.5]  {$READ\_PIXEL$};
+%  \node[state] (getminmax) [below =of readpixel, scale=0.5] {$GET\_MINMAX$};
+%  \node[state] (getdelta) [below =of getminmax, scale=0.5] {$GET\_DELTA$};
+%  \node[state] (calcshift) [below=of getdelta, scale=0.5]  {$CALC\_SHIFT$};
+%  \node[state] (getpixel) [below=of calcshift, scale=0.5 ]  {$GET\_PIXEL$};
+%  \node[state] (calcnewpixel) [below=of getpixel, scale=0.5]  {$CALC\_NEWPIXEL$};
+%  \node[state] (abilitwrite) [below=of calcnewpixel, scale=0.5, yshift=-1cm]  {$ABILIT\_WRITE$};
+%  \node[state] (writepixel) [below=of abilitwrite, scale=0.5, yshift=-1cm]  {$WRITE\_PIXEL$};
+%  \node[state] (done) [below=of writepixel, scale=0.7]  {$DONE$};
+%  \node[state] (waitingpic) [below=of done, scale=0.6]  {$WAITINGPIC$};
+%  \node[state] (waitmem) [right=of calcshift, xshift=8cm, scale=1.2]  {$WAIT\_MEM$};
 
-  \draw (start) edge[red] node{} (init)
-        (init) edge[red] node{} (abilitread)
-        (abilitread) edge[red] node{} (getrc)
-        (getrc) edge[bend left, out=60, in=45, looseness=1, red] node{} (waitmem)
-        (waitmem) edge[bend right, in=-100, out=200, looseness=2, red] node{} (getrc)
-        (getdim) edge[bend left, in=120, red] node{} (waitmem)
-        (waitmem) edge[bend right, out=-70, in=-100, red] node{} (getdim)
-        (readpixel) edge[bend left, out=50, in=130, blue] node{} (waitmem)
-        (waitmem) edge[bend right, out=-30, blue] node{} (getminmax)
-        (getminmax) edge[blue] node{} (readpixel)
-        (readpixel) edge[bend right=90, red] node{} (getdelta)
-        (waitmem) edge [bend right, out=-30, red] node{} (readpixel)
-        (getdelta) edge[bend left, red] node{} (waitmem)
-        (waitmem) edge[bend right=20, brown] node{} (calcshift)
-        (calcshift) edge[bend right=20, brown] node{} (waitmem)
-        (calcshift) edge[red] node{} (getpixel)
-        (getpixel) edge[bend right, green] node{} (waitmem)
-        (waitmem) edge[bend left, out=70, green] node{} (calcnewpixel)
-        (calcnewpixel) edge[green] node{} (abilitwrite)
-        (abilitwrite) edge[green] node{} (writepixel)
-        (writepixel) edge[bend right, in=-80, green] node{} (waitmem)
-        (writepixel) edge[bend left, in=140, green] node{} (abilitread)
-        (abilitread) edge[bend right, green] node{} (getpixel)
-        (waitmem) edge[bend left, out=100, looseness=2, green] node{} (done)
-        (done) edge[green] node{} (waitingpic)
-        (waitingpic) edge[bend left] node{} (start)
-        ;
-\end{tikzpicture}
-}
-\end{center}
+%  \draw (start) edge[red] node{} (init)
+%        (init) edge[red] node{} (abilitread)
+%        (abilitread) edge[red] node{} (getrc)
+%        (getrc) edge[bend left, out=60, in=45, looseness=1, red] node{} (waitmem)
+%        (waitmem) edge[bend right, in=-100, out=200, looseness=2, red] node{} (getrc)
+%        (getdim) edge[bend left, in=120, red] node{} (waitmem)
+%        (waitmem) edge[bend right, out=-70, in=-100, red] node{} (getdim)
+%        (readpixel) edge[bend left, out=50, in=130, blue] node{} (waitmem)
+%        (waitmem) edge[bend right, out=-30, blue] node{} (getminmax)
+%        (getminmax) edge[blue] node{} (readpixel)
+%        (readpixel) edge[bend right=90, red] node{} (getdelta)
+%        (waitmem) edge [bend right, out=-30, red] node{} (readpixel)
+%        (getdelta) edge[bend left, red] node{} (waitmem)
+%        (waitmem) edge[bend right=20, brown] node{} (calcshift)
+%        (calcshift) edge[bend right=20, brown] node{} (waitmem)
+%        (calcshift) edge[red] node{} (getpixel)
+%        (getpixel) edge[bend right, green] node{} (waitmem)
+%        (waitmem) edge[bend left, out=70, green] node{} (calcnewpixel)
+%        (calcnewpixel) edge[green] node{} (abilitwrite)
+%        (abilitwrite) edge[green] node{} (writepixel)
+%        (writepixel) edge[bend right, in=-80, green] node{} (waitmem)
+%        (writepixel) edge[bend left, in=140, green] node{} (abilitread)
+%        (abilitread) edge[bend right, green] node{} (getpixel)
+%        (waitmem) edge[bend left, out=100, looseness=2, green] node{} (done)
+%        (done) edge[green] node{} (waitingpic)
+%        (waitingpic) edge[bend left] node{} (start)
+%        ;
+%\end{tikzpicture}
+%}
+%\end{center}
 
-\pagebreak
-
-
+%\pagebreak
 \section{Risultati dei Test}
 I test eseguiti sono stati pensati appositamente per evitare eventuali errori di programmazione, cercando di coprire il maggior numero di casi possibili. Per farlo, non solo sono stati creati dei test manualmente (dal \texttt{N.$1$} al \texttt{N.$5$} ), ma si è fatto ricorso sia al linguaggio \texttt{C} sia al linguaggio \texttt{Python} per la creazione di veri e propri generatori di test. Entrambi i generatori sono in grado di creare un numero di immagini (di dimensione diversa) in base alla decisione dell'utente. \\
 I test creati dai generatori sono stati a loro volta controllati manualmente. Difatto, dal controllo manuale, è emerso che le funzioni delle librerie randomiche nei due linguaggi, essendo uniformemente distribuite, rendevano praticamente certa la presenza dei valori $0$ e $255$ in una qualsiasi immmagine dalle dimensioni maggiori di 20x20. Immagini che hanno all'interno valori molto distanti tra loro rendono l'equalizzazione dell'immagine inutile. Un \textit{delta} molto grande porta inevitabilmente ad uno \textit{shift} nullo, il che significa che l'immagine non viene equalizzata ma semplicemente copiata. Per evitare, quindi, che i test fossero dei semplici copia-incolla, si è deciso di adottare una distribuzione Gaussiana, avendo così immagini con \textit{shift} di livello $8$ molto più probabili di quelli con \textit{shift} nullo. Dopo questa verifica e vista la semplicità nella scrittura di quest'algoritmo in un linguaggio ad alto livello si è supposta veritiera la correttezza dei test prodotti dai generatori. \\
